--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,7 +1,12 @@
 controllers:
     resource: ../src/Controller/
     type: annotation
+    prefix: /api
 
 kernel:
     resource: ../src/Kernel.php
     type: annotation
+
+api_login_check:
+    path: /api/login_check
+    methods: [POST]
