--- a/composer.json
+++ b/composer.json
@@ -7,22 +7,28 @@
         "php": ">=8.0.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "buttercup/protects": "dev-master",
         "doctrine/annotations": "^1.13",
         "doctrine/doctrine-bundle": "^2.5",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
         "lexik/jwt-authentication-bundle": "^2.14",
+        "mathiasverraes/classfunctions": "1.*",
+        "rhumsaa/uuid": "2.7.*",
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/console": "6.0.*",
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^2",
+        "symfony/form": "6.0.*",
         "symfony/framework-bundle": "6.0.*",
         "symfony/proxy-manager-bridge": "6.0.*",
-        "symfony/runtime": "6.0.*",
+        "symfony/runtime": "^6.2",
         "symfony/security-bundle": "6.0.*",
         "symfony/serializer": "6.0.*",
+        "symfony/twig-bundle": "6.0.*",
         "symfony/validator": "6.0.*",
-        "symfony/yaml": "6.0.*"
+        "symfony/yaml": "6.0.*",
+        "twig/twig": "^2.0"
     },
     "config": {
         "allow-plugins": {
