--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+ my_service_connection: default
 
 services:
     # default configuration for services in *this* file
@@ -39,3 +40,12 @@ services:
             - { name: 'request.param_converter', priority: 255 }
 
     Symfony\Bridge\Doctrine\Security\User\UserLoaderInterface: '@App\Repository\UserRepository'
+
+    App\Infrastructure\Persistence\EventStore\PostRepository:
+        class: App\Infrastructure\Persistence\EventStore\PostRepository
+        arguments: [ "@pdoEventStore", "@pdoEventStore" ]
+    pdoEventStore:
+        class: App\Infrastructure\Persistence\EventStore\PDOEventStore
+        arguments: [ "@doctrine.dbal.default_connection", "@serializer" ]
+
+    
